@@ -35,57 +35,37 @@ import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.util.ReflectionUtils;
 import org.apache.hama.bsp.BSP;
 import org.apache.hama.bsp.BSPPeer;
+import org.apache.hama.bsp.Combiner;
 import org.apache.hama.bsp.sync.SyncException;
 import org.apache.hama.util.KeyValuePair;
 
-@SuppressWarnings("rawtypes")
+@SuppressWarnings("unchecked")
 public class GraphJobRunner extends BSP {
   public static final Log LOG = LogFactory.getLog(GraphJobRunner.class);
+  private Configuration conf;
+  private Combiner<? extends Writable> combiner;
   private Map<String, Vertex> vertices = new HashMap<String, Vertex>();
-  private String masterTask;
-  private String FLAG_MESSAGE = "hama.graph.msg.counts";
 
-  @SuppressWarnings("unchecked")
+  private String FLAG_MESSAGE = "hama.graph.msg.counts";
+  private final String MESSAGE_COMBINER_CLASS = "hama.vertex.message.combiner.class";
+
+  private String masterTask;
+  private boolean updated = true;
+  private int globalUpdateCounts = 0;
+
   @Override
   public void bsp(BSPPeer peer) throws IOException, SyncException,
       InterruptedException {
     int maxIteration = peer.getConfiguration().getInt(
         "hama.graph.max.iteration", 30);
 
-    boolean updated = true;
     int iteration = 0;
     while (updated && iteration < maxIteration) {
-      int globalUpdateCounts = 0;
+      globalUpdateCounts = 0;
       peer.sync();
 
-      MapWritable msg = null;
-      Map<String, LinkedList<Writable>> msgMap = new HashMap<String, LinkedList<Writable>>();
-      while ((msg = (MapWritable) peer.getCurrentMessage()) != null) {
-
-        for (Entry<Writable, Writable> e : msg.entrySet()) {
-          String vertexID = ((Text) e.getKey()).toString();
-
-          if (vertexID.toString().equals(FLAG_MESSAGE)) {
-            if (((IntWritable) e.getValue()).get() == Integer.MIN_VALUE) {
-              updated = false;
-            } else {
-              globalUpdateCounts += ((IntWritable) e.getValue()).get();
-            }
-          } else {
-            Writable value = e.getValue();
-
-            if (msgMap.containsKey(vertexID)) {
-              LinkedList<Writable> msgs = msgMap.get(vertexID);
-              msgs.add(value);
-              msgMap.put(vertexID, msgs);
-            } else {
-              LinkedList<Writable> msgs = new LinkedList<Writable>();
-              msgs.add(value);
-              msgMap.put(vertexID, msgs);
-            }
-          }
-        }
-      }
+      // Map <vertexID, messages>
+      Map<String, LinkedList<Writable>> messages = parseMessages(peer);
 
       // exit if there's no update made
       if (globalUpdateCounts == 0 && peer.getPeerName().equals(masterTask)
@@ -101,32 +81,91 @@ public class GraphJobRunner extends BSP {
 
       // send msgCounts to the master task
       MapWritable updatedCnt = new MapWritable();
-      updatedCnt.put(new Text(FLAG_MESSAGE), new IntWritable(msgMap.size()));
+      updatedCnt.put(new Text(FLAG_MESSAGE), new IntWritable(messages.size()));
       peer.send(masterTask, updatedCnt);
 
-      for (Map.Entry<String, LinkedList<Writable>> e : msgMap.entrySet()) {
-        if (e.getValue().size() > 0) {
-          vertices.get(e.getKey()).compute(e.getValue().iterator());
+      for (Map.Entry<String, LinkedList<Writable>> e : messages.entrySet()) {
+        LinkedList msgs = e.getValue();
+        if (combiner != null) {
+          Writable combined = combiner.combine(msgs);
+          msgs = new LinkedList();
+          msgs.add(combined);
         }
+
+        vertices.get(e.getKey()).compute(msgs.iterator());
       }
       iteration++;
     }
   }
 
-  @SuppressWarnings("unchecked")
+  private Map<String, LinkedList<Writable>> parseMessages(BSPPeer peer)
+      throws IOException {
+    MapWritable msg = null;
+    Map<String, LinkedList<Writable>> msgMap = new HashMap<String, LinkedList<Writable>>();
+    while ((msg = (MapWritable) peer.getCurrentMessage()) != null) {
+
+      for (Entry<Writable, Writable> e : msg.entrySet()) {
+        String vertexID = ((Text) e.getKey()).toString();
+
+        if (vertexID.toString().equals(FLAG_MESSAGE)) {
+          if (((IntWritable) e.getValue()).get() == Integer.MIN_VALUE) {
+            updated = false;
+          } else {
+            globalUpdateCounts += ((IntWritable) e.getValue()).get();
+          }
+        } else {
+          Writable value = e.getValue();
+
+          if (msgMap.containsKey(vertexID)) {
+            LinkedList<Writable> msgs = msgMap.get(vertexID);
+            msgs.add(value);
+            msgMap.put(vertexID, msgs);
+          } else {
+            LinkedList<Writable> msgs = new LinkedList<Writable>();
+            msgs.add(value);
+            msgMap.put(vertexID, msgs);
+          }
+        }
+      }
+    }
+
+    return msgMap;
+  }
+
   public void setup(BSPPeer peer) throws IOException, SyncException,
       InterruptedException {
-    Configuration conf = peer.getConfiguration();
+    this.conf = peer.getConfiguration();
     // Choose one as a master to collect global updates
-    masterTask = peer.getPeerName(0);
-    LOG.debug("vertex class: " + conf.get("hama.graph.vertex.class"));
+    this.masterTask = peer.getPeerName(0);
 
+    if (!conf.getClass(MESSAGE_COMBINER_CLASS, Combiner.class).equals(
+        Combiner.class)) {
+      LOG.debug("Combiner class: " + conf.get(MESSAGE_COMBINER_CLASS));
+
+      combiner = (Combiner<? extends Writable>) ReflectionUtils.newInstance(
+          conf.getClass("hama.vertex.message.combiner.class", Combiner.class),
+          conf);
+    }
+
+    loadVertices(peer);
+    long numberVertices = vertices.size() * peer.getNumPeers();
+
+    for (Map.Entry<String, Vertex> e : vertices.entrySet()) {
+      e.getValue().setNumVertices(numberVertices);
+
+      LinkedList<Writable> msgIterator = new LinkedList<Writable>();
+      msgIterator.add(e.getValue().getValue());
+      e.getValue().compute(msgIterator.iterator());
+    }
+  }
+
+  private void loadVertices(BSPPeer peer) throws IOException {
+    LOG.debug("vertex class: " + conf.get("hama.graph.vertex.class"));
     KeyValuePair<? extends VertexWritable, ? extends VertexArrayWritable> next = null;
     while ((next = peer.readNext()) != null) {
       Vertex<? extends Writable> vertex = (Vertex<? extends Writable>) ReflectionUtils
-          .newInstance(
-              peer.getConfiguration().getClass("hama.graph.vertex.class",
-                  Vertex.class), peer.getConfiguration());
+          .newInstance(conf.getClass("hama.graph.vertex.class", Vertex.class),
+              conf);
       vertex.setVertexID(next.getKey().getName());
       vertex.peer = peer;
 
@@ -141,27 +180,11 @@ public class GraphJobRunner extends BSP {
       vertex.edges = edges;
       vertices.put(next.getKey().getName(), vertex);
     }
-
-    long numberVertices = vertices.size() * peer.getNumPeers();
-    startVertexCompute(numberVertices);
-  }
-
-  @SuppressWarnings("unchecked")
-  private void startVertexCompute(long numberVertices) throws IOException {
-    for (Map.Entry<String, Vertex> e : vertices.entrySet()) {
-      // TODO there's no another way to set numVertices?
-      e.getValue().setNumVertices(numberVertices);
-
-      LinkedList<Writable> msgIterator = new LinkedList<Writable>();
-      msgIterator.add(e.getValue().getValue());
-      e.getValue().compute(msgIterator.iterator());
-    }
   }
 
   /**
    * Just write <new Text(vertexID), (Writable) value> pair as a result
    */
-  @SuppressWarnings("unchecked")
   public void cleanup(BSPPeer peer) throws IOException {
     for (Map.Entry<String, Vertex> e : vertices.entrySet()) {
       peer.write(new Text(e.getValue().getVertexID()), e.getValue().getValue());
