@@ -21,7 +21,9 @@ import java.io.IOException;
 import java.util.Iterator;
 import java.util.List;
 
-public interface VertexInterface<MSGTYPE> {
+import org.apache.hadoop.io.Writable;
+
+public interface VertexInterface<MSGTYPE extends Writable> {
 
   /**
    * @return the vertex ID.
